<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iste776.jpavelw.wanelin.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/upload_speed_input"
        android:layout_alignParentEnd="true"
        android:hint="@string/lbl_upload_speed"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/download_speed_input"
        android:layout_below="@+id/upload_speed_input"
        android:layout_alignParentEnd="true"
        android:hint="@string/lbl_download_speed"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/band_input"
        android:layout_below="@+id/download_speed_input"
        android:layout_alignParentEnd="true"
        android:hint="@string/lbl_band"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/band_input"
        android:id="@+id/linearLayout">

        <Button
        android:text="@string/btn_start"
        android:layout_width="0px"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/btn_start" />

        <Button
            android:text="@string/btn_stop"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_stop" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
